getSkuCollection endpoint
